# ndk_camera

./: CMakeLists.txt  build.gradle
src/androidTest/java/com/example/luciano/ndkcamera/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: native-lib.cpp  native-lib.h
src/main/java/com/example/luciano/ndkcamera/: MainActivity.java
src/main/res/menu/: menu_main.xml
src/main/res/values/: strings.xml
src/test/java/com/example/luciano/ndkcamera/: ExampleUnitTest.java
